<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_4"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/correo2"
                android:layout_width="470dp"
                android:layout_height="70dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="580dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textEmailAddress"
                android:text="@string/correo"
                android:textColor="@color/A"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/contra2"
                android:layout_width="470dp"
                android:layout_height="70dp"
                android:layout_marginLeft="-472dp"
                android:layout_marginTop="652dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textPassword"
                android:text="@string/contra"
                android:textColor="@color/A"
                android:visibility="invisible" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/usuario"
                android:layout_width="240dp"
                android:layout_height="41dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="580dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="text"
                android:text="@string/nombre"
                android:textColor="@color/A"
                android:visibility="invisible"
                tools:ignore="MissingConstraints" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/contra"
                android:layout_width="240dp"
                android:layout_height="41dp"
                android:layout_marginLeft="140dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textPassword"
                android:text="@string/contra"
                android:textColor="@color/A"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/numero"
                android:layout_width="240dp"
                android:layout_height="41dp"
                android:layout_marginLeft="140dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="phone"
                android:text="@string/numero"
                android:textColor="@color/A"
                android:visibility="invisible" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/correo"
                android:layout_width="240dp"
                android:layout_height="41dp"
                android:layout_marginLeft="140dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:fontFamily="casual"
                android:inputType="textEmailAddress"
                android:text="@string/correo"
                android:textColor="@color/A"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-122dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="casual"
            android:text="@string/present"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.336"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="casual"
            android:text="@string/eleccion"
            android:textColor="@color/A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/elxitimg"
            android:layout_width="295dp"
            android:layout_height="294dp"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.537"
            app:srcCompat="@mipmap/logo_prueba_foreground"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="81dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="casual"
            android:text="@string/description"
            android:textColor="@color/C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="195dp"
            android:layout_height="79dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="466dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/si"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/Botones"
                android:fontFamily="casual"
                android:onClick="boton"
                android:text="@string/bt1"
                android:textColor="@color/A" />

            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="79dp"
                android:layout_marginLeft="13dp"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/Botones"
                android:fontFamily="casual"
                android:onClick="boton_no"
                android:text="@string/bt2"
                android:textColor="@color/A" />

        </TableRow>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

